highlights, words fix etc

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</p>
 
 		<h2>Your seed:</h2>
-		<input type="text" class="form-control" id="seed" value="kit venture inmate circle ski prevent burst zoo upon rather angle ancient">
+		<input type="text" class="form-control" id="seed" value="kill venture inmate circle ski prevent burst zoo upon rather angle butter">
 		<p class="note" id="seed-note">&nbsp;</p>
 
 		<h2>Seed in hex format:</h2>
