--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<h1>Electrum seed modifier</h1>
 
 		<p class="justify">
-			This tool can slightly modify the seed you already remember to make it work with another type of wallet. For example, you can upgrade from standart electrum wallet to a segwit wallet, or to switch from electrum to BIP-39 compatible wallet.
+			This tool can slightly modify the seed you already remember to make it work with another type of wallet. For example, you can upgrade from standart electrum wallet to a segwit wallet, or to switch from electrum to BIP-39 compatible wallet with only one different word in the seed.
 		</p>
 		<p class="justify">
 			<b>Be careful!</b> You are entering your private key here! It is strongly recommended to open this page in incognito mode without any browser extensions, switch off your internet connection completely, and only after that enter your seed in the field below. Don't forget to close this site before connecting to the internet again.
